# Battle-of-Small-Backbones

./: .gitignore  pyproject.toml  requirements.txt
config/: cifar10.yaml  cifar100.yaml  cub200.yaml  dtd.yaml  eurosat.yaml  flowers102.yaml  food101.yaml  plantclef.yaml
scripts/: test.py  train.py
src/: cli.py  swats.py  utils.py
src/dataset/: datamodule.py  food101.py
src/models/: __init__.py  backbones.py  lightning_model.py
